# PointCloudProcessUI

./: .gitignore  CMakeLists.txt  Qt基础.md  README.md  debug-qt-wsl-seg-crash.md  main.cpp  ui.html
include/: MainWindow.h  OpenPoseInferencer.h
include/core/: PointCloudAlgo.h
include/core/point_cloud_algo/: PointCloudAlgoInternal.h  PointCloudAlgoSmoothing.tpp  PointCloudAlgoTypes.h
include/pages/: BatchModePage.h  SingleModePage.h
include/pages/batch_mode/: BatchModeTypes.h  BatchWorker.h
include/pages/single_mode/: SingleModePageInternal.h  SingleModePageMembers.h
include/widgets/: CollapsibleBox.h
resources/: app_style.qss
src/: MainWindow.cpp  OpenPoseInferencer.cpp
src/core/: PointCloudAlgo.cpp
src/core/point_cloud_algo/: PointCloudAlgoCamera.cpp  PointCloudAlgoExtraction.cpp  PointCloudAlgoMeasurement.cpp  PointCloudAlgoPreprocess.cpp  PointCloudAlgoRegistration.cpp
src/pages/: BatchModePage.cpp  SingleModePage.cpp
src/pages/batch_mode/: BatchModePage.cpp  BatchWorker.cpp
src/pages/single_mode/: SingleModePageData.cpp  SingleModePageExport.cpp  SingleModePageExtraction.cpp  SingleModePageInferenceMeasurement.cpp  SingleModePageLayout.cpp  SingleModePageRegistration.cpp
src/widgets/: CollapsibleBox.cpp
